--- a/img/index.html
+++ b/img/index.html
@@ -42,17 +42,17 @@
         <tr>
             <td>Lorem ipsum dolor</td>
             <td>Lorem ipsum dolor</td>
-            <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Accusantium eos quo, placeat consectetur ullam fugiat similique.</td>
+            <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia eveniet expedita a quia modi. Totam saepe quibusdam natus harum.</td>
         </tr>
         <tr>
             <td>Lorem ipsum dolor</td>
             <td>Lorem ipsum dolor</td>
-            <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Accusantium eos quo, placeat consectetur ullam fugiat similique.</td>
+            <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia eveniet expedita a quia modi. Totam saepe quibusdam natus harum.</td>
         </tr>
         <tr>
             <td>Lorem ipsum dolor</td>
             <td>Lorem ipsum dolor</td>
-            <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Accusantium eos quo, placeat consectetur ullam fugiat similique.</td>
+            <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia eveniet expedita a quia modi. Totam saepe quibusdam natus harum.</td>
         </tr>
     </tbody>
     
